--- a/View-W3School/index.html
+++ b/View-W3School/index.html
@@ -83,6 +83,9 @@
             </div>
         </div>
     </main>
+    <div class="example-hh" style="height: 100px;">
+
+    </div>
     <!-- Html -->
     <section class="example-section">
         <div class="button-example-container">
@@ -147,6 +150,37 @@
         </div>
     </section>
       <!-- End Css -->
+       <!--JavaScripts  -->
+       <section class="example-js">
+        <div class="button-example-container">
+            <div class="button-container">
+                <h1 style="color: white;">JavaScript</h1>
+                <p style="color: white;">The language for programming web pages</p>
+                <div class="style-button">
+                    <button class="one">Learn Javascripts</button>
+                    <button class="three">javascripts Reference</button>
+                    <button class="four">Get Certificate</button>
+                </div>
+            </div>
+            <div class="example">
+                <h2>Javascripts Example:</h2>
+                <pre><code> 
+        // taking kilometers input from the user
+        const kilometers = prompt("Enter value in kilometers: ")
+
+        // conversion factor
+        const factor = 0.621371
+
+        // calculate miles
+        const miles = kilometers * factor
+
+        console.log(`${kilometers} kilometers is equal to ${miles} miles.`);
+                </code></pre>
+                <button class="btn-Gettificate">Try Yourself</button>
+            </div>
+        </div>
+    </section>
+      <!--End Javascripts  -->
     <!-- footer -->
     <footer class="footer" >
         <div class="head-footer">
