--- a/View-W3School/index.html
+++ b/View-W3School/index.html
@@ -211,8 +211,8 @@
                 <span style="color: red; margin-right:  1%;"><i class="fa-solid fa-circle"></i></span>
                 <span style="color: rgb(236, 236, 85); margin-right:  1%;"><i class="fa-solid fa-circle"></i></span>
                 <span style="color:rgb(104, 207, 104);"><i class="fa-solid fa-circle"></i></span>
-                <div style="background-color: rgb(229, 235, 240); width: 60%; height: 25px; margin-left: 15%; margin-bottom: 10px; font-size: 80%;padding: 0.5%;">
-                    www.w3schools.com/howto/
+                <div class="link-sample-w3school">
+                    <span style="font-size: 100%;">www.w3schools.com/howto/</span>
                 </div>
             </div>
         </div>
@@ -280,7 +280,7 @@
         <div class="style-footer">
             <div>
                 <h3>Top Tutorials</h3>
-                <ul style="list-style-type: none; padding: 0;">
+                <ul style="list-style-type: none; padding: 0; font-size: 80%;">
                     <li><a href="#">HTML Tutorial</a></li>
                     <li><a href="#">CSS Tutorial</a></li>
                     <li><a href="#">JavaScript Tutorial</a></li>
@@ -297,7 +297,7 @@
             </div>
             <div>
                 <h3>Top References</h3>
-                <ul style="list-style-type: none; padding: 0;">
+                <ul style="list-style-type: none; padding: 0; font-size: 80%;">
                     <li><a href="#">HTML Reference</a></li>
                     <li><a href="#">CSS Reference</a></li>
                     <li><a href="#">JavaScript Reference</a></li>
@@ -314,7 +314,7 @@
             </div>
             <div>
                 <h3>Top Examples</h3>
-                <ul style="list-style-type: none; padding: 0;">
+                <ul style="list-style-type: none; padding: 0; font-size: 80%;">
                     <li><a href="#">HTML Examples</a></li>
                     <li><a href="#">CSS Examples</a></li>
                     <li><a href="#">JavaScript Examples</a></li>
@@ -331,7 +331,7 @@
             </div>
             <div>
                 <h3>Get Certified</h3>
-                <ul style="list-style-type: none; padding: 0;">
+                <ul style="list-style-type: none; padding: 0; font-size: 80%;">
                     <li><a href="#">HTML Certificate</a></li>
                     <li><a href="#">CSS Certificate</a></li>
                     <li><a href="#">JavaScript Certificate</a></li>
@@ -348,18 +348,18 @@
                 </ul>
             </div>
         </div>
-        <div style="text-align: center; margin-top: 20px;">
-            <a href="#"><i class="fab fa-youtube" style="color: white; font-size: 24px; margin: 0 10px;"></i></a>
-            <a href="#"><i class="fab fa-linkedin" style="color: white; font-size: 24px; margin: 0 10px;"></i></a>
-            <a href="#"><i class="fab fa-github" style="color: white; font-size: 24px; margin: 0 10px;"></i></a>
-            <a href="#"><i class="fab fa-facebook" style="color: white; font-size: 24px; margin: 0 10px;"></i></a>
-            <a href="#"><i class="fab fa-instagram" style="color: white; font-size: 24px; margin: 0 10px;"></i></a>
-            <a href="#"><i class="fab fa-discord" style="color: white; font-size: 24px; margin: 0 10px;"></i></a>
+        <div style="text-align: center; margin-top: 20px;" class="color-icon-footer">
+            <a href="#"><i class="fab fa-youtube" ></i></a>
+            <a href="#"><i class="fab fa-linkedin" ></i></a>
+            <a href="#"><i class="fab fa-github" ></i></a>
+            <a href="#"><i class="fab fa-facebook" ></i></a>
+            <a href="#"><i class="fab fa-instagram" ></i></a>
+            <a href="#"><i class="fab fa-discord" ></i></a>
         </div>
-        <div style="text-align: center; margin-top: 20px;">
-            <a href="#" style="color: white; text-decoration: none; margin: 0 10px;">FORUM</a>
-            <a href="#" style="color: white; text-decoration: none; margin: 0 10px;">ABOUT</a>
-            <a href="#" style="color: white; text-decoration: none; margin: 0 10px;">CLASSROOM</a>
+        <div style="text-align: center; margin-top: 20px;" class="text-description-icon-footer">
+            <a href="#" >FORUM</a>
+            <a href="#" >ABOUT</a>
+            <a href="#" >CLASSROOM</a>
         </div>
         <div style="text-align: center; margin-top: 20px; font-size: 12px; color: #ccc;">
             W3Schools is optimized for learning and training. Examples might be simplified to improve reading and
